--- a/packages/examples/documents/include/index.html
+++ b/packages/examples/documents/include/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Simple Document</title>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <h1>&lt;h-include></h1>
